# sparkplug-rs

./: .gitignore  Cargo.toml  MIGRATION.md  QUICKSTART.md  README.md  build.rs
docs/: SPARKPLUG_PROTOCOL_SPEC.md
examples/: ot_publisher.rs  ot_subscriber.rs  publisher.rs  subscriber.rs  torture_test_publisher.rs  torture_test_subscriber.rs
src/: error.rs  lib.rs  payload.rs  publisher.rs  subscriber.rs  sys.rs  topic.rs  types.rs
tests/: config_tests.rs  payload_tests.rs  topic_tests.rs  types_tests.rs
